--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 ### AL ###
 #Template for AL projects for Dynamics 365 Business Central
 #launch.json folder
-.vscode/
+# .vscode/
 #Cache folder
-scss/
+# scss/
 #Symbols folder
 css/*.map
 css/main.css
